--- a/project/template.html
+++ b/project/template.html
@@ -8,13 +8,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../data/Shape/SVG/Group 1541.svg">
+    <link rel="icon" href="vendor/data/Shape/SVG/Group 1541.svg">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="../project/vendor/animate_it/animate.css">
+    <link rel="stylesheet" href="vendor/animate_it/animate.css">
     <link rel="stylesheet" href="vendor/feather-icons-web/feather.css">
-    <link rel="stylesheet" type="text/css" href="../project/vendor/slick/slick.css">
-    <link rel="stylesheet" type="text/css" href="../project/vendor/slick/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css">
+    <link rel="stylesheet" type="text/css" href="vendor/slick/slick-theme.css"/>
      
      <!-- Facebook and Twitter integration -->
      <meta property="og:title" content="Student Project for SWD 6"/>
@@ -108,7 +108,7 @@
                      <div class="col-12">
                          <nav class="nav-bar navbar navbar-expand-lg navbar-d animate__animated animate__fadeInDown">
                              <div class="container-fluid">
-                                 <a class="navbar-brand" href="#"><img class="site-logo" src="../data/Shape/SVG/Group%201541.svg"></a>
+                                 <a class="navbar-brand" href="#"><img class="site-logo" src="vendor/data/Shape/SVG/Group%201541.svg"></a>
                                  <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                     <i class="feather-menu menu-icon text-primary" style="font-size: 30px;"></i>
                                 </button>
@@ -163,7 +163,7 @@
                      </div>
                      <div class="col-12 col-md-6 animate__animated animate__fadeInRight" style="animation-delay: 0.9s;">
                           <div class="my-3 mx-3">
-                               <img class="site-img w-100" src="../data/Shape/SVG/Group 1423.svg" alt="">
+                               <img class="site-img w-100" src="vendor/data/Shape/SVG/Group 1423.svg" alt="">
                           </div>
                      </div>
                  </div>
@@ -186,7 +186,7 @@
          </div>
          <div class="scroll-to-next shadow animate__animated animate__fadeIn" style="animation-delay: 0.5s;">
              <a href="#blog" class="">
-                 <img class="animate__animated animate__bounce" style="animation-iteration-count: infinite;" src="../data/Shape/SVG/mouse.svg" alt="">
+                 <img class="animate__animated animate__bounce" style="animation-iteration-count: infinite;" src="vendor/data/Shape/SVG/mouse.svg" alt="">
              </a>
          </div>
     </section>
@@ -195,7 +195,7 @@
         <div class="row  min-vh-100 align-items-center">
              <div class="col-12 col-md-6 py-5 wow animate__fadeInLeft">
                  <div class="text-right">
-                    <img class="Blogimg w-75" src="../data/Shape/SVG/Group 1538.svg" alt="">
+                    <img class="Blogimg w-75" src="vendor/data/Shape/SVG/Group 1538.svg" alt="">
                  </div>
              </div>
              <div class="col-12 col-md-6 BlogTextbg wow animate__fadeInRight">
@@ -230,7 +230,7 @@
                             <div class="card servicescd my-4 border-0 shadow">
                                  <div class="card-body">
                                      <div class="text-center">
-                                        <img src="../data/Shape/SVG/001-process.svg" class="" alt="">
+                                        <img src="vendor/data/Shape/SVG/001-process.svg" class="" alt="">
                                      </div>
                                       <p class="font-weight-bold text-primary my-3">SOCIAL MEDIA MANAGEMENT</p>
                                       <p class="servicespara">Perfect for growing your brand’s social community and engage with the right  audience. We manage everything from curation of content to management of  comments and everything in between.</p>
@@ -244,7 +244,7 @@
                         <div class="card servicescd my-4 border-0 shadow">
                              <div class="card-body">
                                  <div class="text-center">
-                                    <img src="../data/Shape/SVG/002-social-media.svg" class="" alt="">
+                                    <img src="vendor/data/Shape/SVG/002-social-media.svg" class="" alt="">
                                  </div>
                                   <p class="font-weight-bold text-primary my-3">SOCIALS GROWTH CAMPAIGN</p>
                                   <p class="servicespara">Our social growth campaign will have your socials come alive. With constant growth and engagement you will be sure to have the thriving you’ve been looking for.</p>
@@ -258,7 +258,7 @@
                     <div class="card servicescd my-4 border-0 shadow">
                          <div class="card-body">
                              <div class="text-center">
-                                <img src="../data/Shape/SVG/003-responsive.svg" class="" alt="">
+                                <img src="vendor/data/Shape/SVG/003-responsive.svg" class="" alt="">
                              </div>
                               <p class="font-weight-bold text-primary my-3">BRANDING & MEDIA</p>
                               <p class="servicespara">Done right, branding offers a company an edge over the competition. So what exactly is branding, and why is it important for companies to integrate a well-rounded branding and media strategy?</p>
@@ -272,7 +272,7 @@
                 <div class="card servicescd my-4 border-0 shadow">
                      <div class="card-body">
                          <div class="text-center">
-                            <img src="../data/Shape/SVG/007-analysis.svg" class="" alt="">
+                            <img src="vendor/data/Shape/SVG/007-analysis.svg" class="" alt="">
                          </div>
                           <p class="font-weight-bold text-primary my-3">INFLUENCER MARKETING</p>
                           <p class="servicespara">We will pair your business with influencers that speak to your audience. Influencer Marketing is the most effective way to reach a loyal audience.</p>
@@ -286,7 +286,7 @@
             <div class="card servicescd my-4 border-0 shadow">
                  <div class="card-body">
                      <div class="text-center">
-                        <img src="../data/Shape/SVG/004-social-media-1.svg" class="" alt="">
+                        <img src="vendor/data/Shape/SVG/004-social-media-1.svg" class="" alt="">
                      </div>
                       <p class="font-weight-bold text-primary my-3">SOCIAL MEDIA PAID ADVERTISING</p>
                       <p class="servicespara">Our ad campaigns will bring you the results your looking for. From brand awareness campaigns to lead funnels, we have got the tools to create the right ads for your business. Our re-targeting campaigns will be sure to get your visitors coming back to your </p>
@@ -300,7 +300,7 @@
         <div class="card servicescd my-4 border-0 shadow">
              <div class="card-body">
                  <div class="text-center">
-                    <img src="../data/Shape/SVG/008-computer.svg" class="" alt="">
+                    <img src="vendor/data/Shape/SVG/008-computer.svg" class="" alt="">
                  </div>
                   <p class="font-weight-bold text-primary my-3">CONTENT MARKETING SERVICES</p>
                   <p class="servicespara">We can create and provide your company with the best content marketing for your socials to improve online presence. Creating valuable and quality content helps boost conversions and improve customer retention.</p>
@@ -522,16 +522,16 @@
                                 <h1 class="text-white">Marketing</h1>
                                 <div class="">
                                     <a href="">
-                                       <img class="mr-3" src="../data/Shape/SVG/003-facebook.svg" alt="">
+                                       <img class="mr-3" src="vendor/data/Shape/SVG/003-facebook.svg" alt="">
                                     </a>
                                     <a href="">
-                                       <img class="mr-3" src="../data/Shape/SVG/002-google-plus.svg" alt="">
+                                       <img class="mr-3" src="vendor/data/Shape/SVG/002-google-plus.svg" alt="">
                                     </a>
                                     <a href="">
-                                       <img class="mr-3" src="../data/Shape/SVG/001-twitter-logo-silhouette.svg" alt="">
+                                       <img class="mr-3" src="vendor/data/Shape/SVG/001-twitter-logo-silhouette.svg" alt="">
                                     </a>
                                     <a href="">
-                                        <img class="mr-3" src="../data/Shape/SVG/instagram.svg" alt="">
+                                        <img class="mr-3" src="vendor/data/Shape/SVG/instagram.svg" alt="">
                                     </a>
                                 </div>
                             </div>
